--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=employee-security
+jwt.secret=VGhpcy1pcy1hLXN1cGVyLXNlY3JldC1rZXktMTIzNDU2Nzg5MDEyMzQ1Ng==
+jwt.expiration=3600000
